--- a/templates/poste/show.html.twig
+++ b/templates/poste/show.html.twig
@@ -134,16 +134,16 @@
 
                 <div class="info-row-grid">
                     <div class="info-col">
-                        <span class="label">Surface maison</span>
+                        <span class="label">Surface plancher</span>
                         <span class="value">
-                            {{ chantier.surfaceMaison ? chantier.surfaceMaison ~ ' m²' : '-' }}
+                            {{ chantier.surfacePlancher ? chantier.surfacePlancher ~ ' m²' : '-' }}
                         </span>
                     </div>
 
                     <div class="info-col">
-                        <span class="label">Surface combles</span>
+                        <span class="label">Surface Habitable</span>
                         <span class="value">
-                            {{ chantier.surfaceCombles ? chantier.surfaceCombles ~ ' m²' : '-' }}
+                            {{ chantier.surfaceHabitable ? chantier.surfaceHabitable ~ ' m²' : '-' }}
                         </span>
                     </div>
                 </div>
