--- a/templates/chantier/show.html.twig
+++ b/templates/chantier/show.html.twig
@@ -79,8 +79,8 @@
                     <span class="value">{{ chantier.copos ?? '-' }}</span>
                 </div>
                 <div class="info-col">
-                    <span class="label">Surface maison</span>
-                    <span class="value">{{ chantier.surfaceMaison ? chantier.surfaceMaison ~ ' m²' : '-' }}</span>
+                    <span class="label">Surface plancher</span>
+                    <span class="value">{{ chantier.surfacePlancher ? chantier.surfacePlancher ~ ' m²' : '-' }}</span>
                 </div>
             </div>
 
