--- a/templates/chantier/new.html.twig
+++ b/templates/chantier/new.html.twig
@@ -165,6 +165,14 @@
                 {{ form_errors(form.equipe) }}
             </div>
         </div>
+        <div class="etape-field etape-field-full">
+            {{ form_label(form.alerte, null, {'label_attr': {'class': 'etape-label'}}) }}
+            <div class="etape-input">
+                {{ form_widget(form.alerte) }}
+                {{ form_errors(form.alerte) }}
+            </div>
+        </div>
+
 
     </div>
 </div>
