--- a/templates/chantier/edit.html.twig
+++ b/templates/chantier/edit.html.twig
@@ -148,21 +148,28 @@
                 {{ form_errors(form.surfaceHabitable) }}
             </div>
         </div>
-<div class="etape-field">
-    {{ form_label(form.statut, null, {'label_attr': {'class': 'etape-label'}}) }}
-    <div class="etape-input">
-        {{ form_widget(form.statut, {'attr': {'class': 'form-control'}}) }}
-        {{ form_errors(form.statut) }}
-    </div>
-</div>
+        <div class="etape-field">
+            {{ form_label(form.statut, null, {'label_attr': {'class': 'etape-label'}}) }}
+            <div class="etape-input">
+                {{ form_widget(form.statut, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.statut) }}
+            </div>
+        </div>
 
-<div class="etape-field">
-    {{ form_label(form.equipe, null, {'label_attr': {'class': 'etape-label'}}) }}
-    <div class="etape-input">
-        {{ form_widget(form.equipe, {'attr': {'class': 'form-control'}}) }}
-        {{ form_errors(form.equipe) }}
-    </div>
-</div>
+        <div class="etape-field">
+            {{ form_label(form.equipe, null, {'label_attr': {'class': 'etape-label'}}) }}
+            <div class="etape-input">
+                {{ form_widget(form.equipe, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.equipe) }}
+            </div>
+        </div>
+        <div class="etape-field etape-field-full">
+            {{ form_label(form.alerte, null, {'label_attr': {'class': 'etape-label'}}) }}
+            <div class="etape-input">
+                {{ form_widget(form.alerte) }}
+                {{ form_errors(form.alerte) }}
+            </div>
+        </div>
 
     </div>
 </div>
