changement CSS formulaire

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
 
+    {{ importmap('app') }}
+
     <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
 </head>
+
 <body>
     <style>
         html, body {
