--- a/templates/poste/index.html.twig
+++ b/templates/poste/index.html.twig
@@ -13,11 +13,16 @@
     {% for poste in postes %}
         <details class="current">
             <summary>
-               <a href="{{ path('app_poste_show', {'id': poste.id}) }}">{{ poste.libelle }}</a>
+                <a>{{ poste.libelle }}</a>
                 <span class="count">{{ poste.etapes|length }}</span>
+                <a href="{{ path('app_etape_new', {'poste': poste.id}) }}"
+                    class="btn-add"
+                    style="margin-left:10px;">
+                        Nouvelle Etape
+                </a>
             </summary>
 
-
+           
 
             {% if poste.etapes|length > 0 %}
                 {% for etape in poste.etapes %}
