--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -75,12 +75,20 @@
         .menu-item:hover .submenu {
             display: block;
         }
+
+        .logo {
+        width: 180px;
+        display: block;
+        margin: 0 auto 20px;
+        }
+
     </style>
 
     <div class="layout">
         <aside class="sidebar">
             <div class="nomSite">
-                <h1>Batipilot</h1>
+                <img src="{{ asset('images/logo.png') }}" alt="Logo Comble et Création" class="logo">
+                <h1>Comble et Création</h1>
             </div>
 
             <ul class="menu">
