--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -88,7 +88,7 @@
         <aside class="sidebar">
             <div class="nomSite">
                 <img src="{{ asset('images/logo.png') }}" alt="Logo Comble et Création" class="logo">
-                <h1>Combless et Création</h1>
+                <h1>Comblesss et Création</h1>
             </div>
 
             <ul class="menu">
