--- a/templates/etape/new.html.twig
+++ b/templates/etape/new.html.twig
@@ -71,7 +71,7 @@
     </div>
 
     <div class="d-flex justify-content-between mt-4">
-        <a href="{{ path('app_etape_index') }}" class="btn btn-secondary btn-lg">
+        <a href="{{ path('app_poste_index') }}" class="btn btn-secondary btn-lg">
             <i class="bi bi-arrow-left"></i> Annuler
         </a>
 
