--- a/templates/chantier/edit.html.twig
+++ b/templates/chantier/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Modifier le Chantier{% endblock %}
 
 {% block body %}
-<div class="container mt-5">
+<div class="container mt-5 page-chantier-create">
     <h1 class="mb-4">Modifier le chantier - {{ chantier.ville }}</h1>
 
     {{ form_start(form, {'attr': {'class': 'chantier-form'}}) }}
