erreur mineur regler et alimentation des chantier en donnée

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,11 @@
                     <li><a href="{{ path('app_poste_new') }}">Ajouter un poste</a></li>
                 </ul>
 
+                <li class="menu-item">Equipes</li>
+                <ul class="submenu">
+                    <li><a href="{{ path('app_equipe_index') }}">Liste des equipes</a></li>
+                </ul>
+
             </ul>
         </nav>
 
