--- a/templates/etape/edit.html.twig
+++ b/templates/etape/edit.html.twig
@@ -57,7 +57,7 @@
             
 
     <div class="d-flex justify-content-between mt-4">
-        <a href="{{ path('app_etape_index') }}" class="btn btn-secondary btn-lg">
+        <a href="{{ path('app_poste_index') }}" class="btn btn-secondary btn-lg">
             <i class="bi bi-arrow-left"></i> Retour
         </a>
 
