--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -994,3 +994,13 @@ body {
     max-width: 1200px;
     margin: 0 auto;
 }
+/* FIX ALIGNEMENT PAGE CHANTIER */
+
+.page-chantier-create {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.page-chantier-create .poste-section .poste-header > div {
+    flex-wrap: wrap;
+}
