--- a/templates/chantier/new.html.twig
+++ b/templates/chantier/new.html.twig
@@ -293,7 +293,8 @@
     </div>
 </div>
 <script>
-document.addEventListener('DOMContentLoaded', () => {
+document.addEventListener('turbo:load', () => {
+
 
     document.querySelectorAll('.montant-ht').forEach(inputHT => {
 
