--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Comble & Création{% endblock %}</title>
 
-    {#{ importmap('app') }#}
+    {{ importmap('app') }}
     <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
 </head>
 
